Update: AboutUs Page Completed

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
             <h2 class="hero_name">TravelBloom</h2>
         </div>
         <ul class="navbar">
-            <li><a href="#">Home</a> </li>
-            <li><a href="#">About us</a></li>
+            <li><a href="index.html">Home</a> </li>
+            <li><a href="about.html">About us</a></li>
             <li> <a href="#">Contact us</a></li>
         </ul>
         <div class="search_box">
@@ -108,7 +108,7 @@
                   </datalist>
                 <i class="fa-solid fa-magnifying-glass magnifier" style="color: rgba(0, 150, 136,0.86);" id="search_logo"></i>
                 <button type="submit" class="button SearchButton">Search</button>
-                <button type="reset" class="button">Clear</button>
+                <button type="reset" class="button reset">Clear</button>
             </form>
         </div>
     </nav>
