--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul class="navbar">
             <li><a href="index.html">Home</a> </li>
             <li><a href="about.html">About us</a></li>
-            <li> <a href="#">Contact us</a></li>
+            <li> <a href="contact.html">Contact us</a></li>
         </ul>
         <div class="search_box">
             <form action="#" id="search">  
